--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
 	"type": "library",
 	"license": "MIT",
 	"autoload": {
-		"classmap": ["src/"]
+		"psr-4": {
+			"hellsh\\": "src/"
+		}
 	},
 	"require": {
 		"php": ">=5",
